Add service authentication, including apikey authentication and OIDC client credentials flow authentication. Add OpenAPI specifications for the authentication endpoints, plus tests and documentation for both authentication methods. Improve the handling of program termination, including catching all errors thrown. Split the running of the authn test specs into separate processes to fix problems with configuring the app.
