# app/routes/authn-service-routes.js
@@ -2,13 +2,20 @@
 
 const express = require('express');
 const authnServiceController = require('../controllers/authn-service-controller');
+const authnConfig = require('../lib/authn-configuration');
 
 const router = express.Router();
 
-router.route('/authn/service/login')
-    .get(authnServiceController.login);
+router.route('/authn/service/apikey-challenge')
+    .get(
+        authnConfig.isServiceAuthenticationMechanismEnabled('apikey'),
+        authnServiceController.apikeyGetChallenge
+    );
 
-router.route('/authn/service/logout')
-    .get(authnServiceController.logout);
+router.route('/authn/service/apikey-token')
+    .get(
+        authnConfig.isServiceAuthenticationMechanismEnabled('apikey'),
+        authnServiceController.apikeyGetToken
+    );
 
 module.exports = router;
